# lcf-ecs

./: CMakeLists.txt  README.md  test.cpp  usage.md  usagec.cpp
include/: class_pool.hpp  component.hpp  ecs_config.hpp  entity.hpp  entity_manager.hpp  function_storage.hpp  id_.hpp  id_safety.hpp  id_thread_safe.hpp  operating_message.hpp  single_class_set.hpp  type_id.hpp  void_any.hpp
